--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,18 @@
 .externalNativeBuild
 .cxx
 local.properties
+/report/*.log
+/report/*.aux
+/report/*.fdb_latexmk
+/report/*.synctex.gz
+/report/*.toc
+/report/*.fls
+/report/*.bbl
+/report/*.bcf
+/report/*.blg
+/report/*.out
+/.idea/vcs.xml
+/report/*.run.xml
+/app/.classpath
+/app/.project
+/app/.settings
