New action to build project
Old action completed in 2 seconds, so I don't think that it was working

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,5 +13,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Android Github Action
-      uses: Vukan-Markovic/Github-Android-Action@1.2
+    - name: Android build
+      uses: vgaidarji/android-github-actions-build@v1.0.1
