--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,5 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Android build
-      uses: vgaidarji/android-github-actions-build@v1.0.1
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
