Runs on all pull requests

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ master, development ]
   pull_request:
-    branches: [ master, development ]
+    branches:
+      - '**'
 
 jobs:
   build:
