--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,17 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.0"
     implementation "androidx.fragment:fragment-ktx:1.3.0"
 
+    implementation 'com.opencsv:opencsv:4.6'
+
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.3"
 
-    implementation 'com.opencsv:opencsv:4.6'
+    implementation "androidx.room:room-runtime:2.2.6"
+    implementation "androidx.room:room-ktx:2.2.6"
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    kapt "androidx.room:room-compiler:2.2.6"
 
     testImplementation 'junit:junit:4.13.1'
 
