--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,7 +2,8 @@ name: Android CI
 
 on:
   push:
-    branches: [ master, development ]
+    branches: 
+      - '**'
   pull_request:
     branches:
       - '**'
