--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VegetableGardening">
-        <activity android:name=".creategarden.CreateBedActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="dk.mifu.pmos.vegetablegardening.activities.CreateBedActivity" />
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
