--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ plugins {
     id 'kotlin-kapt'
 }
 
+def apiKeyPropertiesFile = rootProject.file("apikey.properties")
+def apiKeyProperties = new Properties()
+
+apiKeyProperties.load(new FileInputStream(apiKeyPropertiesFile))
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -17,6 +22,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "WEATHER_KEY", apiKeyProperties['WEATHER_KEY'])
     }
 
     buildTypes {
@@ -63,6 +69,8 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.6"
     implementation "androidx.room:room-ktx:2.2.6"
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.android.volley:volley:1.1.1'
 
     kapt "androidx.room:room-compiler:2.2.6"
 
