--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.0"
     implementation "androidx.fragment:fragment-ktx:1.3.0"
 
-    implementation 'com.opencsv:opencsv:4.6'
+    implementation 'com.opencsv:opencsv:5.3'
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
@@ -72,9 +72,11 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
 
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
     kapt "androidx.room:room-compiler:2.2.6"
 
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
