--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dk.mifu.pmos.vegetablegardening">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VegetableGardening">
+        <service
+            android:name="dk.mifu.pmos.vegetablegardening.helpers.WeatherDataLocationService"
+            android:foregroundServiceType="location"
+            android:enabled="true"
+            android:exported="false"/>
         <activity android:name="dk.mifu.pmos.vegetablegardening.activities.CreateBedActivity" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
