--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VegetableGardening">
-        <activity android:name="dk.mifu.pmos.vegetablegardening.activities.CreateBedActivity" />
-        <activity android:name=".activities.MainActivity">
+        <activity
+            android:name="dk.mifu.pmos.vegetablegardening.activities.CreateBedActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
