--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -4,8 +4,8 @@ build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
-gradle.user.home=
-java.home=/usr/lib/jvm/java-11-openjdk-amd64
+gradle.user.home=/home/peter/.local/share/gradle
+java.home=/usr/lib/jvm/java-15-openjdk
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
