--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'androidx.navigation.safeargs'
     id 'kotlin-kapt'
+    id 'de.mannodermaus.android-junit5'
 }
 
 def apiKeyPropertiesFile = rootProject.file("apikey.properties")
@@ -78,7 +79,14 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'io.mockk:mockk:1.10.5'
 
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-vintage-engine:5.7.0'
+
+    androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
