--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,3 +26,5 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Run instrumented tests
+      uses: faruktoptas/android-github-actions-emulator@latest
