--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,5 +26,19 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Add api-key file
+      run: echo ${{ secrets.APIKEY }} > apikey.properties
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
     - name: Run instrumented tests
       uses: faruktoptas/android-github-actions-emulator@latest
