--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,4 +41,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Run instrumented tests
-      uses: faruktoptas/android-github-actions-emulator@latest
+      uses: faruktoptas/android-github-actions-emulator@1.1.0
