--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,34 +11,34 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
     - name: Add api-key file
       run: echo ${{ secrets.APIKEY }} > apikey.properties
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
       run: ./gradlew build
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: checkout
+      uses: actions/checkout@v2
+
+    - name: run tests
+      uses: reactivecircus/android-emulator-runner@v2
       with:
-        java-version: 1.8
-    - name: Add api-key file
-      run: echo ${{ secrets.APIKEY }} > apikey.properties
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Run instrumented tests
-      uses: faruktoptas/android-github-actions-emulator@1.1.0
+        api-level: 30
+        script: ./gradlew connectedCheck
