--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,14 +31,26 @@ jobs:
       run: ./gradlew build
 
   test:
+    name: Instrumentation tests
     runs-on: macos-latest
+    timeout-minutes: 20
+    strategy:
+      matrix:
+        api-level:
+          - 21
+          - 24
+          - 29
 
     steps:
-    - name: checkout
-      uses: actions/checkout@v2
-
-    - name: run tests
-      uses: reactivecircus/android-emulator-runner@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        api-level: 30
-        script: ./gradlew connectedCheck
+        java-version: 1.8
+
+      ## Actual task
+      - name: Instrumentation Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: ${{ matrix.api-level }}
+          arch: x86_64
+          script: ./gradlew connectedCheck --no-daemon --stacktrace
