--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,6 +41,8 @@ jobs:
           - 29
 
     steps:
+    - uses: actions/checkout@v2
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
