--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,6 +48,9 @@ jobs:
       with:
         java-version: 1.8
 
+    - name: Add api-key file
+      run: echo ${{ secrets.APIKEY }} > apikey.properties
+
       ## Actual task
     - name: Instrumentation Tests
       uses: reactivecircus/android-emulator-runner@v2
