Trying to get test CI to working

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew testDebugUnitTest --stacktrace
 
-  UnitTests:
+  InstrumentationTests:
     runs-on: macos-latest
 
     steps:
