--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.kotlin_version = '1.4.31'
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -20,6 +21,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
 }
 
