--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
 
     implementation "com.github.skydoves:balloon:1.3.3"
 
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+
     kapt "androidx.room:room-compiler:2.2.6"
 
     testImplementation "org.mockito:mockito-core:1.10.19"
